Return some implementations and add csv saver to configuration file